--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
     environment:
       - IS_CELERY=false
       - UWSGI_CMD=uwsgi --ini /usr/src/app/uwsgi.ini
+    entrypoint: [ "/usr/src/app/entrypoint.sh" ]
 
   celery:
     restart: unless-stopped
@@ -92,6 +93,7 @@ services:
     environment:
       - IS_CELERY=true
       - CELERY_CMD=celery -A geonode.celery_app:app worker --without-gossip --without-mingle -Ofair -B -E --statedb=/mnt/volumes/statics/worker.state -s /mnt/volumes/statics/celerybeat-schedule --loglevel=INFO --concurrency=10 -n worker1@%h -f /var/log/celery.log
+    entrypoint: [ "/usr/src/app/entrypoint.sh" ]
 
   geonode:
     image: geonode/nginx:${SET_DOCKER_ENV}
