--- a/scripts/docker/env/development/django.env
+++ b/scripts/docker/env/development/django.env
@@ -4,6 +4,9 @@ GEONODE_INSTANCE_NAME=geonode
 GEONODE_LB_HOST_IP=localhost
 GEONODE_LB_PORT=80
 
+# LANGUAGE_CODE=en
+LANGUAGES=(('en','English'),('vi','Vietnamese'))
+
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 GEONODE_DATABASE=geonode
@@ -38,7 +41,7 @@ GEOSERVER_LOCATION=http://geoserver:8080/geoserver/
 GEOSERVER_ADMIN_USER=admin
 GEOSERVER_ADMIN_PASSWORD=geoserver
 
-OGC_REQUEST_TIMEOUT=30
+OGC_REQUEST_TIMEOUT=300
 OGC_REQUEST_MAX_RETRIES=1
 OGC_REQUEST_BACKOFF_FACTOR=0.3
 OGC_REQUEST_POOL_MAXSIZE=10
@@ -59,8 +62,8 @@ GEOIP_PATH=/mnt/volumes/statics/geoip.db
 ALLOWED_HOSTS=['django', '*']
 
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
-ADMIN_EMAIL=admin@localhost
+ADMIN_PASSWORD=admin123
+ADMIN_EMAIL=quachdongthang@gmail.com
 
 # EMAIL Notifications
 EMAIL_ENABLE=False
@@ -113,7 +116,7 @@ MEMCACHED_LOCK_EXPIRE=3600
 MEMCACHED_LOCK_TIMEOUT=10
 
 MAX_DOCUMENT_SIZE=2
-CLIENT_RESULTS_LIMIT=5
+CLIENT_RESULTS_LIMIT=10
 API_LIMIT_PER_PAGE=1000
 
 # GIS Client
