--- a/scripts/docker/env/production/django.env
+++ b/scripts/docker/env/production/django.env
@@ -10,6 +10,9 @@ C_FORCE_ROOT=1
 FORCE_REINIT=false
 DEBUG=False
 
+# LANGUAGE_CODE=en
+LANGUAGES=(('en','English'),('vi','Vietnamese'))
+
 DJANGO_SETTINGS_MODULE=geonode.settings
 GEONODE_INSTANCE_NAME=geonode
 GEONODE_LB_HOST_IP=
@@ -57,11 +60,11 @@ MEMCACHED_LOCK_EXPIRE=3600
 MEMCACHED_LOCK_TIMEOUT=10
 
 MAX_DOCUMENT_SIZE=2
-CLIENT_RESULTS_LIMIT=5
+CLIENT_RESULTS_LIMIT=10
 API_LIMIT_PER_PAGE=1000
 
 # HTTPD Server
-GEONODE_LB_HOST_IP=localhost
+GEONODE_LB_HOST_IP=http://localhost
 GEONODE_LB_PORT=80
 
 # IP or domain name and port where the server can be reached on HTTPS (leave HOST empty if you want to use HTTP only)
@@ -90,7 +93,7 @@ GEOSERVER_LOCATION=http://geoserver:8080/geoserver/
 GEOSERVER_ADMIN_USER=admin
 GEOSERVER_ADMIN_PASSWORD=geoserver
 
-OGC_REQUEST_TIMEOUT=30
+OGC_REQUEST_TIMEOUT=300
 OGC_REQUEST_MAX_RETRIES=1
 OGC_REQUEST_BACKOFF_FACTOR=0.3
 OGC_REQUEST_POOL_MAXSIZE=10
@@ -125,8 +128,8 @@ FAVORITE_ENABLED=True
 # #################
 # Admin Settings
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin
-ADMIN_EMAIL=admin@localhost
+ADMIN_PASSWORD=admin123
+ADMIN_EMAIL=quachdongthang@gmail.com
 
 # EMAIL Notifications
 EMAIL_ENABLE=False
